--- a/minutes/2015-02-24.md
+++ b/minutes/2015-02-24.md
@@ -1,16 +1,21 @@
 24 -Feb -2014
 +++++++++++++
-* Startup event
-** Montreal NewTech contacted Ilias for the event of March 3rd.
-** 2 startups to be selected to have a booth at PyCon with free passes for employees.
-** Need to call more startups. Deadline on the 26th of Feb
-* MP 52
+
+## Startup event
+
+* Montreal NewTech contacted Ilias for the event of March 3rd.
+* 2 startups to be selected to have a booth at PyCon with free passes for employees.
+* Need to call more startups. Deadline on the 26th of Feb
+
+## MP 52
+
 ** PyCon prep theme
-** Invite Greg, Julia, Tim Sutton to talk.
-** JP offers to present a lighting talk
-** Suggested date March 9th
-** Title: Quadrupède Révolutionaire / quadruped revolutionist
-* PyCon / MontrealPython / MtlData / MtlDevOps
-** Possible location: Notman House
-** Possible date: April 13 2015
-** PyCon race: need volunteers
+* Invite Greg, Julia, Tim Sutton to talk.
+* JP offers to present a lighting talk
+* Suggested date March 9th
+* Title: Quadrupède Révolutionaire / quadruped revolutionist
+
+## PyCon / MontrealPython / MtlData / MtlDevOps
+* Possible location: Notman House
+* Possible date: April 13 2015
+* PyCon race: need volunteers
