Adds more informations about next mtlpy

--- a/minutes/2017-03-06.md
+++ b/minutes/2017-03-06.md
@@ -3,5 +3,7 @@ Montréal-Python
 Ordre du jour:
 
   1. MP63
+    * 10 Avril 2017 chez Shopify
+    * Multidimensional Notebook
   2. Election
   3. Vidéo
